--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,49 @@
 body {
-  text-align: center;
-  padding: 5%;
   background-color: #fcffee;
   font-family: Verdana, Arial, sans-serif;
+  padding: 5%;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+}
+
+h1 {
+  margin-bottom: 10px;
 }
 
 .meme-button {
   cursor: pointer;
+  margin-top: 10px;
+}
+
+.meme-item {
+  text-align: left;
+  display: inline-block;
+  padding: 10px;
+  position: relative;
+  width: 150px;
+  height: 150px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.meme-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 8px;
+  border: 3px solid #0D6EFD;
+  position: absolute;
+  object-fit: cover;
+  filter: brightness(70%);
+}
+
+.meme-text {
+  width: 150px;
+  text-align: center;
+  position: absolute;
+  border-radius: 5px;
+  bottom: 0;
+  animation-name: fade-in;
+  animation-duration: 1s;
+  font-size: 14px;
 }
