--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,14 +3,43 @@ body {
   font-family: Verdana, Arial, sans-serif;
   padding: 1% 5% 5% 5%;
   text-align: center;
-  color: white;
   font-weight: bold;
 }
 
 h1 {
-  color: black;
   margin-bottom: 10px;
   font-size: 48px;
+}
+
+h2 {
+  margin-bottom: 40px;
+}
+
+h1,
+h2,
+h3 {
+  color: black;
+}
+
+.form-check-inline {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.form-check-inline .form-group {
+  margin: 0 10px;
+}
+
+.form-check-inline .form-label {
+  margin-bottom: 0.5rem;
+  text-align: left;
+  display: block;
+}
+
+.form-check-inline .form-control {
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .meme-button {
@@ -33,13 +62,14 @@ h1 {
   width: 150px;
   height: 150px;
   border-radius: 8px;
-  border: 3px solid #0D6EFD;
+  border: 3px solid #337ab7;
   position: absolute;
   object-fit: cover;
   filter: brightness(90%);
 }
 
 .meme-text {
+  color: white;
   width: 150px;
   text-align: center;
   position: absolute;
