--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,10 +11,6 @@ h1 {
   font-size: 48px;
 }
 
-h2 {
-  margin-bottom: 40px;
-}
-
 h1,
 h2,
 h3 {
@@ -23,7 +19,8 @@ h3 {
 
 .form-check-inline {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 10px;
   align-items: center;
 }
 
