--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,6 +65,15 @@ h3 {
   filter: brightness(90%);
 }
 
+.user-meme-image {
+  position: relative;
+  display: inline-block;
+  margin: 5px;
+  width: 200px;
+  border-radius: 4px;
+  border: 3px solid red;
+}
+
 .meme-text {
   color: white;
   width: 150px;
@@ -89,11 +98,25 @@ h3 {
 }
 
 @keyframes darken {
-  from {filter: brightness(90%)};
-  to {filter: brightness(10%)};
+  from {
+    filter: brightness(90%)
+  }
+
+  ;
+
+  to {
+    filter: brightness(10%)
+  }
+
+  ;
 }
 
 @keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
