--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,7 +69,7 @@ h3 {
   position: relative;
   display: inline-block;
   margin: 5px;
-  width: 200px;
+  width: 400px;
   border-radius: 4px;
   border: 3px solid red;
 }
@@ -98,25 +98,11 @@ h3 {
 }
 
 @keyframes darken {
-  from {
-    filter: brightness(90%)
-  }
-
-  ;
-
-  to {
-    filter: brightness(10%)
-  }
-
-  ;
+  from {filter: brightness(90%)};
+  to {filter: brightness(10%)};
 }
 
 @keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
